--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -18,139 +18,76 @@
             android:layout_marginRight="4dp"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/textView4"
-                android:layout_width="match_parent"
-                android:layout_height="35dp"
-                android:text="Bitchute settings"
-                android:textAlignment="center"
-                android:textSize="24sp"
-                android:textStyle="bold" />
-
-            <RadioGroup
-                android:id="@+id/bitchuteplayerradioGroup"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:background="#33883E8B"
+                android:orientation="horizontal">
 
-                <RadioButton
-                    android:id="@+id/bitchuteuse_webtorrentwebview"
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/textView4"
+                        android:layout_width="wrap_content"
+                        android:layout_height="35dp"
+                        android:text="Bitchute settings"
+                        android:textAlignment="center"
+                        android:textSize="24sp"
+                        android:textStyle="bold" />
+
+                    <Button
+                        android:id="@+id/load_bitchute"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginEnd="8dp"
+                        android:layout_marginBottom="8dp"
+                        android:text="Import Subscriptions" />
+
+                </LinearLayout>
+
+                <RadioGroup
+                    android:id="@+id/bitchuteplayerradioGroup"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Webtorrent Webview" />
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
 
-                <RadioButton
-                    android:id="@+id/bitchuteuse_vlc"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="VLC" />
+                    <RadioButton
+                        android:id="@+id/bitchuteuse_webtorrentwebview"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Webtorrent Webview" />
 
-                <RadioButton
-                    android:id="@+id/bitchuteuse_exo"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="exo " />
+                    <RadioButton
+                        android:id="@+id/bitchuteuse_vlc"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="VLC" />
 
-                <RadioButton
-                    android:id="@+id/bitchuteuse_default"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="System" />
+                    <RadioButton
+                        android:id="@+id/bitchuteuse_exo"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="exo " />
 
-                <RadioButton
-                    android:id="@+id/bitchuteuse_webview"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Webview" />
+                    <RadioButton
+                        android:id="@+id/bitchuteuse_default"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="System" />
 
-                <RadioButton
-                    android:id="@+id/bitchuteuse_native"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Vidview " />
+                    <RadioButton
+                        android:id="@+id/bitchuteuse_webview"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Embedded Webview" />
 
-                <RadioButton
-                    android:id="@+id/bitchuteuse_newpipe"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Newpipe" />
-
-            </RadioGroup>
-
-            <Button
-                android:id="@+id/load_bitchute"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginBottom="8dp"
-                android:text="load bitchute subscriptions" />
-
-            <TextView
-                android:id="@+id/textView5"
-                android:layout_width="match_parent"
-                android:layout_height="37dp"
-                android:text="Youtube settings"
-                android:textAlignment="center"
-                android:textSize="24sp"
-                android:textStyle="bold" />
-
-            <RadioGroup
-                android:id="@+id/youtubeplayerradioGroup"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:duplicateParentState="false"
-                android:layoutDirection="ltr"
-                android:layoutMode="clipBounds"
-                android:orientation="vertical"
-                android:textDirection="ltr">
-
-
-                <RadioButton
-                    android:id="@+id/youtubeuse_vlc"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="VLC" />
-
-                <RadioButton
-                    android:id="@+id/youtubeusenewpipe"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Newpipe" />
-
-                <RadioButton
-                    android:id="@+id/youtubeuse_webview"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:layoutDirection="ltr"
-                    android:text="web view" />
-
-                <RadioButton
-                    android:id="@+id/youtubeuse_default"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="System" />
-
-                <RadioButton
-                    android:id="@+id/youtubeuse_exo"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="exo*" />
-
-            </RadioGroup>
-
-            <Button
-                android:id="@+id/load_youtube"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
-                android:text="load youtube subscriptions" />
+                </RadioGroup>
+            </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/feedsynclayout"
@@ -165,7 +102,7 @@
                     android:layout_marginStart="16dp"
                     android:layout_weight="1"
                     android:fontFamily="serif"
-                    android:text="days to keep"
+                    android:text="days to keep feed entries"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
@@ -230,6 +167,80 @@
                 </RadioGroup>
             </LinearLayout>
 
+            <LinearLayout
+                android:id="@+id/youtubesettings"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#338F3E92"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/textView5"
+                        android:layout_width="wrap_content"
+                        android:layout_height="37dp"
+                        android:text="Youtube settings"
+                        android:textAlignment="center"
+                        android:textSize="24sp"
+                        android:textStyle="bold" />
+
+                    <Button
+                        android:id="@+id/load_youtube"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginEnd="8dp"
+                        android:text="Import Subscriptions" />
+
+                </LinearLayout>
+
+                <RadioGroup
+                    android:id="@+id/youtubeplayerradioGroup"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:duplicateParentState="false"
+                    android:layoutDirection="ltr"
+                    android:layoutMode="clipBounds"
+                    android:orientation="vertical"
+                    android:textDirection="ltr">
+
+
+                    <RadioButton
+                        android:id="@+id/youtubeuse_vlc"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="VLC" />
+
+                    <RadioButton
+                        android:id="@+id/youtubeusenewpipe"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Newpipe" />
+
+                    <RadioButton
+                        android:id="@+id/youtubeuse_webview"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layoutDirection="ltr"
+                        android:text="Embedded Webview" />
+
+                    <RadioButton
+                        android:id="@+id/youtubeuse_default"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="System" />
+
+                </RadioGroup>
+
+            </LinearLayout>
+
             <TextView
                 android:id="@+id/textView2"
                 android:layout_width="match_parent"
@@ -241,7 +252,7 @@
                 android:layout_marginBottom="8dp"
                 android:autoLink="web"
                 android:paddingTop="16dp"
-                android:text="Webview plays the embedded version from either sites player. VLC is a great open source ad free player. If you prefer another player on your system use default. Exo player is a decent option for Bitchute which supports background play. " />
+                android:text="Webview plays the embedded version from either sites player. The bitchute embedded player seemed to just be playing the MP4 file, so added an explicit Webtorrent version. VLC is a great open source ad free player. Newpipe is a great open source Youtube player option. If you prefer another player on your system use default and then select your preferred player when prompted. Exo player is a decent option for Bitchute which supports background play. " />
 
             <TextView
                 android:id="@+id/textView3"
