--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,7 +7,7 @@
         android:title="@string/title_home" />
     <item
         android:id="@+id/navigation_channels"
-        android:icon="@android:drawable/sym_def_app_icon"
+        android:icon="@mipmap/channel_foreground"
         android:title="@string/title_Channels" />
 
     <item
