--- a/app/src/main/res/layout/newuseralert.xml
+++ b/app/src/main/res/layout/newuseralert.xml
@@ -32,8 +32,8 @@
         android:id="@+id/alerttext"
         android:layout_width="wrap_content"
         android:layout_height="600dp"
-        android:text="No Channels configured for your video feed. You can import yoru channels from Bitchute or Youtube by going to settings and hitting the import button for the respective sites. Note:system may be a little wonky while its importing all the channels and videos at first.
-\n You could also manually search and add channels in the discover section, but realistically it's better to maintain subscriptions on your site account, and then just import any changes to this app."
+        android:text="No Channels configured for your video feed. You can import subscriptions from Bitchute or Youtube by going to the settings section and hitting the import button.
+\n You could also manually search and add channels in the discover section, but realistically it's better to maintain subscriptions at the site"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
